# sync-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TASKS.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 07cfd5bac535_initial_tables.py
src/app/: main.py
src/app/controllers/: health_controller.py  managements_controller.py  media_controller.py  transactions_controller.py
src/app/core/: config.py  database.py  exceptions.py  logging.py
src/app/domain/: enums.py  labels.py  money.py  uploads.py
src/app/models/: __init__.py  base.py  customer.py  management.py  media_asset.py  transaction.py
src/app/providers/ai/: base.py  fake_provider.py  gemini_provider.py
src/app/providers/storage/: base.py  local_storage_provider.py
src/app/repositories/: customer_repository.py  management_repository.py  media_asset_repository.py  transaction_repository.py
src/app/schemas/: common.py  customer_schema.py  extraction_schema.py  management_schema.py  media_asset_schema.py  transaction_schema.py
src/app/services/: ai_extraction_service.py  evidence_processing_service.py  image_preprocessing_service.py  management_service.py  media_service.py  recalculation.py  response_builder.py  summary_service.py  transaction_service.py
src/app/utils/: dates.py  files.py  images.py
